# CMakeLists.txt para o sistema de configuração# Coletar arquivos fontefile(GLOB CONFIG_SOURCES "*.c")file(GLOB CONFIG_HEADERS "*.h")# Definir a biblioteca para o sistema de configuraçãoadd_library(emu_config STATIC    ${CONFIG_SOURCES}    ${CONFIG_HEADERS})# Dependênciastarget_link_libraries(emu_config    emu_core    emu_utils)# Exportar headers para outros componentestarget_include_directories(emu_config PUBLIC    ${CMAKE_CURRENT_SOURCE_DIR})# Instalar biblioteca e headersinstall(TARGETS emu_config DESTINATION lib)install(FILES ${CONFIG_HEADERS} DESTINATION include/core/config)