# CMakeLists.txt para o frontend comum# Coletar arquivos fontefile(GLOB FRONTEND_COMMON_SOURCES "*.c")file(GLOB FRONTEND_COMMON_HEADERS "*.h")# Definir a biblioteca para o frontend comumadd_library(emu_frontend_common STATIC    ${FRONTEND_COMMON_SOURCES}    ${FRONTEND_COMMON_HEADERS}    frontend_types.h)# Dependênciastarget_link_libraries(emu_frontend_common    emu_core)# Exportar headers para outros componentestarget_include_directories(emu_frontend_common PUBLIC    ${CMAKE_CURRENT_SOURCE_DIR})# Instalar biblioteca e headersinstall(TARGETS emu_frontend_common DESTINATION lib)install(FILES     ${FRONTEND_COMMON_HEADERS}    frontend_types.h    DESTINATION include/frontend/common) 