# Configuração da biblioteca de entrada do Mega_Emucmake_minimum_required(VERSION 3.10)# Encontrar dependênciasfind_package(SDL2 REQUIRED)# Listar os diretórios de inclusãoinclude_directories(    ${CMAKE_CURRENT_SOURCE_DIR}    ${CMAKE_CURRENT_SOURCE_DIR}/..    ${CMAKE_CURRENT_SOURCE_DIR}/../gui    ${CMAKE_CURRENT_SOURCE_DIR}/../../core    ${SDL2_INCLUDE_DIRS})# Arquivo fonte do módulo de entradaset(INPUT_SOURCES    # Adicione aqui os arquivos fonte do sistema de input)if(INPUT_SOURCES)    add_library(input STATIC ${INPUT_SOURCES})    target_include_directories(input PUBLIC        ${CMAKE_CURRENT_SOURCE_DIR}        ${CMAKE_SOURCE_DIR}/deps/sdl2/include    )    target_link_libraries(input PRIVATE        SDL2::SDL2    )endif()# Configurações específicas para cada plataformaif(WIN32)    target_compile_definitions(input_manager PRIVATE -D_CRT_SECURE_NO_WARNINGS)endif()