# CMakeLists.txt para o core das ferramentas# Coletar arquivos fontefile(GLOB TOOLS_CORE_SOURCES "*.c")file(GLOB TOOLS_CORE_HEADERS "*.h")# Definir a biblioteca para o core das ferramentasadd_library(emu_tools_core STATIC    ${TOOLS_CORE_SOURCES}    ${TOOLS_CORE_HEADERS})# Dependênciastarget_link_libraries(emu_tools_core    emu_core)# Exportar headers para outros componentestarget_include_directories(emu_tools_core PUBLIC    ${CMAKE_CURRENT_SOURCE_DIR})# Instalar biblioteca e headersinstall(TARGETS emu_tools_core DESTINATION lib)install(FILES ${TOOLS_CORE_HEADERS} DESTINATION include/tools/core) 