# CMakeLists.txt para o editor de desenvolvimento# Coletar arquivos fontefile(GLOB DEV_EDITOR_SOURCES "*.c")file(GLOB DEV_EDITOR_HEADERS "*.h")# Definir a biblioteca para o editor de desenvolvimentoadd_library(emu_tools_dev_editor STATIC    ${DEV_EDITOR_SOURCES}    ${DEV_EDITOR_HEADERS})# Dependênciastarget_link_libraries(emu_tools_dev_editor    emu_core    emu_tools_core)# Exportar headers para outros componentestarget_include_directories(emu_tools_dev_editor PUBLIC    ${CMAKE_CURRENT_SOURCE_DIR})# Instalar biblioteca e headersinstall(TARGETS emu_tools_dev_editor DESTINATION lib)install(FILES ${DEV_EDITOR_HEADERS} DESTINATION include/tools/dev_editor) 